# dsconv

./: BUILD.adoc  CHANGELOG.adoc  CONTRIBUTING.adoc  Cargo.toml  INSTALL.adoc  README-crates.io.md  README.adoc  README.md  build.rs  justfile  meson.build  meson_options.txt
.github/workflows/: CD.yaml
doc/: meson.build
doc/crates.io/: README.md
doc/man/include/: section-copyright.adoc  section-exit-status.adoc  section-notes.adoc  section-reporting-bugs.adoc
doc/man/man1/: dsconv.1.adoc  meson.build
doc/man/man5/: dsconv-config.toml.5.adoc  meson.build
share/patch/: README.adoc.patch
src/: cli.rs  config.rs  convert.rs  macros.rs  main.rs  value.rs
tests/: integration.rs
tests/resource/: sample.msgpack
