[package]
name = "dsconv"
version = "0.3.0"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.56.0"
description = "A data-serialization format converter"
readme = "README.md"
repository = "https://github.com/sorairolake/dsconv"
license = "Apache-2.0"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
atty = "0.2.14"
bat = { version = "0.18.3", default-features = false }
deser-hjson = "1.0.2"
dialoguer = { version = "0.9.0", default-features = false }
directories = "4.0.1"
indexmap = "1.7.0"
json5 = "0.4.1"
once_cell = "1.8.0"
rmp-serde = "0.15.5"
rmpv = "1.0.0"
ron = { version = "0.7.0", features = ["indexmap"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = { version = "1.0.69", features = ["preserve_order"] }
serde_yaml = "0.8.21"
structopt = "0.3.25"
strum = { version = "0.22.0", features = ["derive"] }
toml = { version = "0.5.8", features = ["preserve_order"] }

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"

[build-dependencies]
vergen = { version = "5.1.17", features = ["git"], default-features = false }

[features]
default = ["regex-fancy"]

# You need to enable either of the following to build:
regex-onig = ["bat/regex-onig"] # Use the Oniguruma regex library
regex-fancy = ["bat/regex-fancy"] # Use the fancy-regex regex library

[profile.release]
lto = true
